[package]
name = "mklink_tool_rust"
version = "1.0.0"
edition = "2021"

[dependencies]
# 使用轻量级的 eframe (egui框架) 作为 GUI
eframe = "0.27.2"

# === 施展魔法：Rust 极限瘦身编译参数 ===
[profile.release]
opt-level = "z"     # 优化体积 (Optimize for size)
lto = true          # 开启链接时优化，剥离无用代码
codegen-units = 1   # 最大化优化效果 (编译变慢，但体积更小)
panic = "abort"     # 移除 panic 展开代码，节省空间
strip = true        # 剥离调试符号 (极大幅度减小体积)
